<resources>
    <string name="app_name">iCARE</string>
    <string name="currency_code">AED</string>
    <string name="password">Password</string>
    <string name="alert">ALERT</string>
    <string name="info">Info!</string>
    <string name="info_msg">There are many different options on how much water we should be drinking everyday. The health authorities commonly recommmend eight 8-ounce glasses, which equals about 2 liters or half a gallon.\n\nThis is called the 8*8 rule and is very easy to remember. 8*8 Rules may differ for every individual. Please consult your doctor for more information.</string>
    <string name="alert_New">Thank You</string>
    <string name="warning">WARNING</string>
    <string name="water_range">Water Range</string>
    <string name="accessories">Accessories</string>
    <string name="by_day">Day</string>
    <string name="by_month">Month</string>
    <string name="open_weather_maps_app_id">3362480061efe725f9a79728377d88a8</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="OK">OK</string>
    <string name="rest_hydra">RESET</string>
    <string name="turn_on">TURN ON</string>
    <string name="existingcustomer">EXISTING CUSTOMER?</string>
    <string name="No_Network">This application requires internet connection. Please check your internet connection.</string>
    <string name="check_network">Please Check Internet connection.</string>
    <string name="No_GPS">Please turn on the GPS...!</string>
    <string name="No_GPS_turn_on">Please turn on the location to enjoy all App features...!</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">LOGOUT</string>
    <string name="Loading_Data">Loading Data....</string>
    <string name="something_wrong">Some thing went wrong. Please try Again....!</string>
    <string name="logout_msg">Are you sure you want Logout?</string>
    <string name="please_select">Please Select any water quantity to continue</string>
    <string name="sucessfully_address_saved">Your address has been sent for processing.</string>
    <string name="save">Save</string>
    <string name="rest">Reset</string>
    <string name="forgot_password">ForgotPassword ?</string>
    <string name="change_language">Change Language ?</string>
    <string name="get_started">GET STARTED</string>
    <string name="add_one_glass_of_water">Hi, add your\n first glass of water for today.</string>
    <string name="You_have_accepted"><u>Accepted Disclaimer</u></string>
    <string name="well_done">Well done!\nToday you drank</string>
    <string name="you_drink">Hi, you need to drink  atleast %s litres of water for today.</string>
    <string name="performed_normal">Today you performed \n excellent, congratulations!</string>
    <string name="add_drink">ADD DRINK</string>
    <string name="LOGIN_FAILED">LOGIN FAILED! Please try again.</string>
    <string name="SIGNUP_FAILED">SIGNUP FAILED! Please try again.</string>
    <string name="notification">Notification</string>
    <string name="no_orders_available">No Orders Available</string>
    <string name="no_media_available">No Media Available</string>
    <string name="no_address_available">No Addresses Available</string>
    <string name="no_products_available">No Products Available</string>
    <string name="no_images">No Images found</string>
    <string name="no_Cities">No Cities found</string>
    <string name="no_videos">No Videos found</string>
    <string name="conform_payment">Conform Payment</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="recurr_order">RECUR ORDER</string>
    <string name="recurringorder">Recurring order</string>
    <string name="Meters">Meters</string>
    <string name="Years">Years</string>
    <string name="conform">CONFIRM</string>
    <string name="Click_Proceed_to_Payment">Click Proceed to Payment.</string>
    <string name="DO_You_want_to_Recurr_Order">Do you want to add the items to Recurring.</string>
    <string name="Unable_to_address">Unable fetch the address. \nPlease fill the details.</string>
    <string name="DO_You_want_to_cancel_Order">Do you want to cancel\n   this Order?</string>
    <string name="DO_You_want_to_Repeat_Order">Do you want to repeat this Order?</string>
    <string name="DO_You_want_to_recurr_Order">Do you want to recur this Order?</string>
    <string name="DO_You_want_to_clear_Order">Are you sure you want to clear the items?</string>
    <string name="DO_You_want_to_remove_item">Are you sure you want to remove the item?</string>
    <string name="DO_You_want_to_cancel_recurring">Are you sure you want to cancel the Recurring?</string>
    <string name="DO_You_want_to_remove_address">Are you sure you want to remove this address?</string>
    <string name="DO_You_want_to_reset">Are you sure you want to reset?</string>
    <string name="Order_Successfully_saved">Order Successfully Saved.</string>
    <string name="Order_Successfully_Placed">Order Successfully Placed.</string>
    <string name="please_select_address">Your address has not been submitted. \nPlease add an address from manage address.</string>
    <string name="OTP_sent">OTP has successfully sent. Please Verify...</string>
    <string name="OTP_sent_fail">Failed to Send OTP...</string>
    <string name="payment_successfull">Payment.</string>
    <string name="Proceed">Proceed</string>
    <string name="recurring_order">recurring_order</string>
    <string name="city_name">City Name</string>
    <string name="order_cancel">Order Cancelled.</string>
    <string name="Recurr_Removed">Recurring Removed.</string>
    <string name="confirm">Confirmation</string>
    <string name="confirmation">Are you sure do want to delete this Order?</string>
    <string name="setLoaction">Select Location</string>
    <string name="incorrect">Incorrect mobile no or email.</string>
    <string name="invliad">Please enter valid \nmobile no or email id. </string>
    <string name="Already_emailId">Email/Mobile already Exist. </string>
    <string name="moreInfo">For more information \n Please contact our customer service. </string>
    <string name="mobile_no">+971 4 885 8905 </string>
    <string name="Mobile_number">Mobile number</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="search_cities"> Search Cities </string>
    <string name="no_offer_available"> Exciting new offers are coming your way! </string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="suggetion_to_drink">You should drink 1.4l of water a day, but you may change the number if you wish</string>
    <string name="tell_your_friends">Tell your friends about it</string>
    <string name="please_select_one">No items to display.\n Please select at least one.</string>
    <string name="No_Orders">You did not select any item Please select at least one</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="suggestion_warning">Please enter the Suggestion Drink Quantity in Settings.</string>
    <string name="successfully_saved">Successfully Saved.</string>
    <string name="no_changes">No Changes found.</string>
    <string name="age_please">Please enter the age.</string>
    <string name="gender_please">Please select the gender.</string>
    <string name="height_please">Please enter the height.</string>
    <string name="valid_weight">Weight can not be less than 30.</string>
    <string name="weight_please">Please enter the weight.</string>
    <string name="Hydration_Settings">Hydration Settings</string>
    <string name="drink_target">Please enter the drink target.</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="plzSetLocation">Please Select Location.</string>
    <string name="done">Done</string>
    <string name="view_orders">My Orders</string>
    <string name="close">Close</string>
    <string name="no_products_selected">Please select atleast one product.</string>
    <string name="photos">Photos</string>
    <string name="confirm_detials">Please Confirm the details.</string>
    <string name="cancle_order">Cancel order</string>
    <string name="view_detail">VIEW DETAILS</string>
    <string name="menu_name">Menu Name</string>
    <string name="weekly">Weekly</string>
    <string name="two_weeks">Two Weeks</string>
    <string name="monthly">Monthly</string>
    <string name="add">Add</string>
    <string name="recurring_orders">Recurring Orders</string>
    <string name="total">Total</string>
    <string name="prefferdTime">Prefferd Time</string>
    <string name="recurring_type">Recurring Type</string>
    <string name="dayes">Days</string>
    <string name="save_order">Save Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_develiery">Our Delivery Executives delivers water in your area on:</string>
    <string name="fetching_areas">Fetching Areas and Sub Areas...</string>
    <string name="no_area">No Area found</string>
    <string name="no_emirate">No Emirate found</string>
    <string name="no_subarea">No SubArea found</string>
    <string name="select_area">Select Area</string>
    <string name="select_emirates">Select Emirates</string>
    <string name="select_subarea">Select SubArea</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="product">Product</string>
    <string name="plz_select_area">Please select the Area.</string>
    <string name="plz_select_Emirates">Please select the Emirates.</string>
    <string name="view_order_details">View Order Details</string>
    <string name="display_options">Display Options</string>
    <string name="app_feedback">App Feedback</string>
    <string name="delivery_feedback">Service Delivery Feedback</string>
    <string name="query_service">Query Service</string>
    <string name="feedback">Feedback</string>
    <string name="terrible">Terrible</string>
    <string name="bad">Bad</string>
    <string name="description">Mai Dubai is produced in a world class bottling and manufacturing facility equipped with the latest technology sourced from some of the best suppliers in the business and managed by highly skilled individuals. Before we put the label on our water it goes through a purification process that makes it worthy to wear the Mai Dubai logo.</string>
    <string name="purification">First it undergoes multiple stages of filteration then it passes through a high-tech purification. The result is the highest quality pure water.</string>
    <string name="healthierwater">Health is important. That is why, in addition to essential minerals such as Calcium, Bicarbonate and Magnesium, Mai Dubai water is particularly low in Sodium; making Mai Dubai\'s 5 gallon bottle, the lowest in Sodium content amongst 5 gallon bottles in the UAE.</string>
    <string name="quality">From receiving of raw material to finished product, quality is constantly monitored through, computerized systems and supervised by a highly experienced staff.</string>
    <string name="description_title">Description</string>
    <string name="purification_title">Purification</string>
    <string name="low_sodium_healthier_water">Low Sodium,healthier water</string>
    <string name="adding_minerals">Adding Minerals</string>
    <string name="quaity_title">Quaity</string>
    <string name="Once_in_a_Week">Once in a Week</string>
    <string name="Once_in_two_Weeks">Once in two Weeks</string>
    <string name="Once_in_3_Weeks">Once in 3 Weeks</string>
    <string name="Once_in_a_Month">Once in a Month</string>
    <string name="morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="select_date"> SELECT PREFERRED DATE</string>
    <string name="select_time">PREFERRED TIME</string>
</resources>