<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blacktransperent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_5"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivclosePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/crosswhite"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Mai dubai 330 ml"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large_23"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="@dimen/img_width_grid"
        android:layout_height="@dimen/img_height_grid"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_8"
        android:id="@+id/ivImage"/>

    <ListView
        android:id="@+id/lvAttribute"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/description"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/purification_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/margin_10"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/purification"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_sodium_healthier_water"
            android:drawablePadding="@dimen/margin_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/margin_10"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/healthierwater"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adding_minerals"
            android:drawablePadding="@dimen/margin_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/margin_10"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quaity_title"
            android:drawablePadding="@dimen/margin_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/margin_10"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/quality"/>
    </LinearLayout>
</LinearLayout>
