<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    android:background="#cfe3ef"
    android:paddingBottom="@dimen/margin_45">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_blue"
            android:padding="@dimen/margin_15"
            android:layout_gravity="start"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            android:padding="@dimen/margin_15"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSelect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvThundredMl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Once_in_a_Week"
            android:layout_marginTop="@dimen/margin_25"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/text_size_medium"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sep"
            android:layout_marginTop="@dimen/margin_5"/>

        <TextView
            android:id="@+id/tvTwoThundredMl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Once_in_two_Weeks"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/text_size_medium"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sep"
            android:layout_marginTop="@dimen/margin_5"/>
        <TextView
            android:id="@+id/tvThreeThundredMl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Once_in_3_Weeks"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/text_size_medium"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sep"
            android:layout_marginTop="@dimen/margin_5"/>
        <TextView
            android:id="@+id/tvFiveThundredMl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Once_in_a_Month"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/text_size_medium"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sep"
            android:layout_marginTop="@dimen/margin_5"/>
    </LinearLayout>
</LinearLayout>
